# matsuzawa-20260313-3

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-0-gpt4o-gsm8k.yaml  proposed-gpt4o-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
