# Python project configuration for AIRAS prompt-tuning experiments

[project]
name = "airas-prompt-tuning"
version = "0.1.0"
description = "Prompt-tuning experiments for improved Chain-of-Thought reasoning"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    
    # ML frameworks
    "torch>=2.1.0",
    "datasets>=2.14.0",
    
    # LLM APIs
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [VALIDATOR FIX - Attempt 1]
# [PROBLEM]: uv failed to build the package with error "Unable to determine which files to ship inside the wheel"
# [CAUSE]: Hatchling could not find a directory matching the normalized package name (airas_prompt_tuning), and no explicit file selection was configured
# [FIX]: Added [tool.hatch.build.targets.wheel] configuration to explicitly tell Hatchling to package the src/ directory
#
# [OLD CODE]:
# (missing configuration - no [tool.hatch.build.targets.wheel] section)
#
# [NEW CODE]:
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
